<resources>
    <string name="app_name">AgriMart</string>
    <string name="slogan">An toàn - Uy tín - Chất lượng</string>
    <string name="fullNameApp">Hệ thống phân phối nông sản</string>
    <string name="fullNameAppV2">Hệ thống phân phối\n nông sản</string>
    <string name="appName"><font color='#ff8800'>Agri</font><font color='#3BD98C'>Mart</font></string>
    <string name="menu_Home">Trang chủ</string>
    <string name="menu_Sepcialty">Đặc sản</string>
    <string name="menu_Standard">Tiêu chuẩn</string>
    <string name="menu_Category">Danh mục</string>
    <string name="menu_Profile">Tài khoản</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="btn_sign_in">Đăng nhập</string>
    <string name="new_customer_create_account">Bạn mới biết đến AgriMart? <font color='#008CFF'>Đăng ký</font></string>
    <string name="forgot_pass">Quên mật khẩu</string>
    <string name="agrimart_2024">2024 AgriMart. Tất cả các quyền được bảo lưu</string>
    <string name="password_assistance">Đặt lại mật khẩu</string>
    <string name="enter_email_address_associated_with_account">Nhập địa chỉ email liên kết với tài khoản của bạn.</string>
    <string name="email_address">Email Address</string>
    <string name="btn_continue">Continue</string>
    <string name="authentication_required">Nhập mã xác thực</string>
    <string name="description_2">Chúng tôi đã gửi mã từ <b>AgriMart</b> tới email của bạn. Vui lòng nhập mã xác thực bên dưới.</string>
    <string name="hint_otp">Nhập mã OTP</string>
    <string name="hint_counter">60</string>
    <string name="resend_otp">Gửi lại OTP</string>
    <string name="you_hav_exceeded_number_of_requests">Bạn đã vượt quá số lượng yêu cầu</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="retype_new_password">Nhập lại mật khẩu mới</string>
    <string name="save_changes">Đổi mật khẩu</string>
    <string name="cancel_v2">Hủy</string>
    <string name="using_strong_password">Sử dụng mật khẩu mạnh ít nhất 8 ký tự</string>
    <string name="sign_up">Đăng ký</string>
    <string name="fullNameUser">Họ tên: </string>
    <string name="emailUser">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="eight_characters">Mật khẩu phải có tối thiểu 8 ký tự</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="already_have_account">Đăng nhập. <font color='#008CFF'>Đã có tài khoản?</font></string>
    <string name="cooperation">Liên kết</string>
    <string name="find_product">Tìm kiếm sản phẩm</string>
    <string name="flash_sale"><font color="#ffff8800">FLASH SALE</font></string>
    <string name="see_all">Xem tất cả</string>
    <string name="ocop_product">Sản phẩm <font color="#FF0000">O</font><font color="#008000">C</font><font color="#0000FF">O</font><font color="#FFD700">P</font></string>
    <string name="specialty_products">Đặc sản vùng miền</string>
    <string name="today_suggestion">Tất cả sản phẩm</string>
    <string name="comming_product">Sản phẩm sắp ra mắt</string>
    <string name="upcomming">Sắp ra mắt</string>
    <string name="what_is_product_look_for">Nhập tên sản phẩm cần tìm</string>
    <string name="recent_search">Tìm kiếm gần đây</string>
    <string name="clear_all">Xoá tất cả</string>
    <string name="schedule">schedule</string>
    <string name="vegetable">Rau củ</string>
    <string name="category_image">Category Image</string>
    <string name="product_image">Product Image</string>
    <string name="product_price">50.000 VNĐ</string>
    <string name="share_product">Share Product</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="title_demo">Táo - Chanh - Dứa - Nho</string>
    <string name="rating_star">Rating Star</string>
    <string name="have_sold">Đã bán</string>
    <string name="favourite_product">Favourite Product</string>
    <string name="hn">Hà Nội</string>
    <string name="htx_demo">HTX Demo</string>
    <string name="_5_000_000">5.000.000</string>
    <string name="policy_title_0">Điều khoản và điều kiện giao dịch</string>
    <string name="policy_title_1">1. Phạm vi áp dụng</string>
    <string name="policy_title_2">1.1. Điều Khoản và Điều Kiện sẽ được áp dụng cho khách hàng:</string>
    <string name="policy_title_3">1.2. Khách hàng tại Điều Khoản và Điều Kiện này (sau đây gọi là “Khách Hàng”) bao gồm:</string>
    <string name="policy_title_4">2. Cách hình thành hợp đồng</string>
    <string name="policy_title_5">2.1. Mọi thông tin về sản phẩm đưa ra trên POSTMART trong bất kỳ trường hợp nào không được hiểu là đề nghị giao kết hợp đồng của AgriMart tới Khách Hàng.</string>
    <string name="policy_title_6">2.2. Việc Khách Hàng hủy Đơn Đặt Hàng (nếu có) phải được thực hiện phù hợp với quy định tại Chính sách đổi trả đăng tải trên AgriMart.</string>
    <string name="policy_title_7">2.3. AgriMart có quyền không xác nhận, từ chối hoặc hủy hoặc thu hồi các Sản Phẩm đã giao của các Đơn Đặt Hàng của Khách Hàng trong một số trường hợp khác theo quyết định của AgriMart mà không cần thông báo đến Khách Hàng.</string>
    <string name="policy_title_8">3. Giá cả và thanh toán</string>
    <string name="policy_title_9">3.1. Giá của Sản Phẩm có thể đã bao gồm hoặc chưa bao gồm thuế giá trị gia tăng như thông tin mô tả cụ thể trên trang giới thiệu sản phẩm.</string>
    <string name="policy_title_10">3.2. Khách Hàng thanh toán giá trị của Đơn Đặt Hàng theo quy định tại Chính sách thanh toán đăng tải trên AgriMart trước khi nhận Sản Phẩm của Đơn Đặt Hàng đó. Khi Khách Hàng nhấn (click) vào ô “Thanh toán” để tiến hành thanh toán Đơn Đặt Hàng có nghĩa là</string>
    <string name="policy_title_11">4. Giao nhận sản phẩm</string>
    <string name="policy_title_12">4.1. Sản Phẩm sẽ được giao đến địa chỉ Khách Hàng yêu cầu trong Đơn Đặt Hàng vào thời gian quy định tại Chính sách giao hàng đăng tải trên AgriMart hoặc vào thời gian Khách Hàng yêu cầu được nhận hàng với điều kiện thời gian giao hàng này phải phù hợp với Chính sách giao hàng đó.</string>
    <string name="policy_title_13">4.2. Người Nhận Hàng phải kiểm tra Sản Phẩm và ký vào Phiếu giao hàng khi nhận Sản Phẩm.</string>
    <string name="policy_title_14">5. Đổi, trả sản phẩm</string>
    <string name="policy_title_15">6. Giới hạn trách nhiệm</string>
    <string name="policy_title_16">7. Điều khoản chung</string>
    <string name="policy_title_17">7.1. Các quy định được dẫn chiếu trong Điều Khoản và Điều Kiện này là một phần không thể tách rời của Điều Khoản và Điều Kiện này.</string>
    <string name="policy_title_18">7.2. AgriMart và Khách Hàng có trách nhiệm thực hiện mọi nghĩa vụ quy định tại Điều Khoản và Điều Kiện này.</string>
    <string name="policy_title_19">7.3. Nếu bất kỳ nội dung nào của các Điều Khoản và Điều kiện này bị bất kỳ cơ quan có thẩm quyền xem là vô hiệu hoặc không thể thực hiện toàn bộ hoặc một phần, thì tính hiệu lực của các nội dung khác trong Điều Khoản và Điều kiện này sẽ không bị ảnh hưởng.</string>
    <string name="policy_title_20">7.4. Điều Khoản và Điều Kiện này và mọi vấn đề phát sinh trong quan hệ hợp đồng giữa AgriMart và Khách Hàng sẽ được hiểu và điều chỉnh theo quy định của luật pháp Việt Nam. Mọi tranh chấp, khác biệt, khiếu nại phát sinh từ/hoặc liên quan đến nội dung của Điều Khoản và Điều Kiện này sẽ được giải quyết thông qua thương lượng trên tinh thần thiện chí trong vòng ba mươi (30) ngày. Nếu không thể giải quyết trong thời hạn ba mươi (30) ngày này, tranh chấp, khiếu nại trên có thể được giải quyết tại cơ quan tòa án có thẩm quyền.</string>
    <string name="policy_content_0">Xin vui lòng đọc kỹ Điều khoản và điều kiện giao dịch này (sau đây gọi là “Điều Khoản và Điều Kiện”) trước khi đặt mua bất kỳ hàng hóa nào trên AgriMart (sau đây gọi là “Sản Phẩm”).</string>
    <string name="policy_content_1">(i) Mua Sản Phẩm bán trên AgriMart.\n(ii) Có nhu cầu được giao sản phẩm đến các địa điểm phù hợp với Chính sách giao hàng đăng tải trên AgriMart.</string>
    <string name="policy_content_2">(i) Mọi cá nhân có đầy đủ năng lực hành vi dân sự từ đủ 15 tuổi trở lên và có tài sản để thực hiện giao dịch mua sản phẩm trên AgriMart\n(ii) Mọi tổ chức được thành lập và hoạt động hợp pháp theo quy định của pháp luật Việt Nam.</string>
    <string name="policy_content_3">Quan hệ hợp đồng với Khách Hàng chỉ hình thành và có hiệu lực từ thời điểm đơn đặt hàng của Khách Hàng (sau đây gọi là “Đơn Đặt Hàng”) được chấp nhận dưới một trong các hình thức sau:\n\t\t(i) Thông báo bằng văn bản gửi tới địa chỉ email mà Khách Hàng đã cung cấp cho AgriMart\n\t\t(ii) Tin nhắn từ AgriMart tới Khách Hàng xác nhận Đơn Đặt Hàng đã được xử lý thành công.</string>
    <string name="policy_content_4">Đơn Đặt Hàng có thể bị hủy một phần hoặc toàn bộ theo xác nhận của Khách Hàng với trung tâm CSKH. AgriMart có quyền hủy Đơn Đặt Hàng trong một số trường hợp quy định tại Chính sách giao hàng đăng tải trên AgriMart.\n\nAgriMart có quyền áp dụng các điều kiện hạn chế trong việc triển khai các chương trình khuyến mại (“CTKM”), bao gồm nhưng không giới hạn ở:\n\t(i) giới hạn về số lượng Sản Phẩm tối đa trong mỗi CTKM mà một Khách Hàng được mua\n\t(ii) giới hạn về mục đích mua Sản Phẩm, theo đó Sản Phẩm mua trong các CTKM chỉ được sử dụng để tiêu dùng, không được kinh doanh, mua đi bán lại, hoặc chuyển nhượng dưới bất cứ hình thức nào\n\t(iii) các giới hạn khác (nếu có) được quy định chi tiết trong từng CTKM. Các điều kiện hạn chế trong việc triển khai các CTKM sau đây gọi là Chính sách khuyến mại.\n\nVì vậy, AgriMart có quyền không xác nhận, từ chối hoặc hủy hoặc thu hồi các Sản Phẩm đã giao của các Đơn Đặt Hàng vi phạm bất kỳ nội dung nào trong Chính Sách Khuyến Mại mà không cần thông báo đến Khách Hàng. Để làm rõ, Đơn Đặt Hàng vi phạm Chính Sách Khuyến Mại là Đơn Đặt Hàng do một hoặc một nhóm Khách Hàng có liên hệ với nhau, sử dụng một hay nhiều tài khoản trên AgriMart để đặt mua Sản Phẩm có áp dụng CTKM. AgriMart sẽ sử dụng các công cụ của mình để xác minh và có toàn quyền quyết định Đơn Đặt Hàng đó có vi phạm Chính Sách Khuyến Mại hay không.</string>
    <string name="policy_content_5">Trong mọi trường hợp, giá của Sản Phẩm không bao gồm phí vận chuyển. Chi phí vận chuyển được quy định cụ thể tại Chính sách giao hàng đăng tải trên AgriMart</string>
    <string name="policy_content_6">(i) Khách Hàng xác nhận đã rà soát thông tin Đơn Đặt Hàng\n(ii) Khách Hàng đồng ý là Điều Khoản và Điều Kiện sẽ được áp dụng cho giao dịch mua Sản Phẩm trong Đơn Đặt Hàng đó.</string>
    <string name="policy_content_7">Trong trường hợp Khách Hàng muốn thay đổi địa chỉ nhận Sản Phẩm thì Khách Hàng phải gọi điện thông báo lại cho Trung Tâm CSKH tên và số điện thoại liên lạc của người được Khách Hàng chỉ định nhận Sản Phẩm cũng như địa chỉ nhận Sản Phẩm. Người được Khách Hàng chỉ định nhận Sản Phẩm trên Đơn Đặt Hàng hoặc bằng điện thoại như quy định tại Điều 4.1 này được gọi chung là “Người Nhận Hàng”.</string>
    <string name="policy_content_8">Trong một số trường hợp, khi được AgriMart yêu cầu, Người Nhận Hàng phải xuất trình giấy tờ tùy thân như Chứng minh nhân dân/Thẻ căn cước công dân/Hộ chiếu để nhân viên giao hàng kiểm tra trước khi nhận hàng.</string>
    <string name="policy_content_9">Rủi ro và quyền sở hữu Sản Phẩm sẽ được chuyển cho Khách Hàng từ thời điểm Người Nhận Hàng ký vào Phiếu giao hàng. Khách Hàng cần giữ lại Phiếu giao hàng để đối soát hoặc để giải quyết các vấn đề có thể phát sinh liên quan đến Sản Phẩm (nếu có).</string>
    <string name="policy_content_10">Việc đổi, trả Sản Phẩm được thực hiện theo các quy định tại Chính sách đổi trả đăng tải trên POSTMART.</string>
</resources>