<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_selector"
        android:title="@string/menu_Home" />
    <item
        android:id="@+id/specialtyFragment"
        android:icon="@drawable/land_location_selector"
        android:title="@string/menu_Sepcialty" />
    <item
        android:id="@+id/standardFragment"
        android:icon="@drawable/leaf_selector"
        android:title="@string/menu_Standard" />
    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/category_selector"
        android:title="@string/menu_Category" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/user_selector"
        android:title="@string/menu_Profile" />
<!--    <item-->
<!--        android:id="@+id/loginFragment"-->
<!--        android:icon="@drawable/user_selector"-->
<!--        android:title="@string/login"-->
<!--        app:showAsAction="never"/>-->
</menu>