<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardCornerRadius="@dimen/dimen10dp"
    app:cardElevation="@dimen/dimen5dp"
    app:cardUseCompatPadding="true"
    app:elevation="@dimen/dimen1dp">

    <LinearLayout
        android:id="@+id/productItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgProductImage"
            android:layout_width="@dimen/dimen140dp"
            android:layout_height="@dimen/dimen150dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen10dp"
            android:contentDescription="@string/product_image"
            android:src="@drawable/product_demo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen10dp"
                android:layout_marginTop="@dimen/dimen20dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/title_demo"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen10dp"
                android:layout_marginTop="@dimen/dimen20dp"
                android:text="@string/_5_000_000"
                android:textColor="@color/orange"
                android:textSize="@dimen/dimen18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgShare"
                    android:layout_width="@dimen/dimen30dp"
                    android:layout_height="@dimen/dimen30dp"
                    android:layout_margin="@dimen/dimen20dp"
                    android:contentDescription="@string/share_product"
                    android:src="@drawable/ic_share" />

                <ImageView
                    android:id="@+id/imgCart"
                    android:layout_width="@dimen/dimen30dp"
                    android:layout_height="@dimen/dimen30dp"
                    android:layout_margin="@dimen/dimen20dp"
                    android:contentDescription="@string/add_to_cart"
                    android:src="@drawable/ic_shopping_cart" />

                <ImageView
                    android:id="@+id/imgFavourite"
                    android:layout_width="@dimen/dimen30dp"
                    android:layout_height="@dimen/dimen30dp"
                    android:layout_margin="@dimen/dimen20dp"
                    android:contentDescription="@string/add_to_favourite"
                    android:src="@drawable/ic_delete_24" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

